--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="property-stats-container flex">
           <div class="price">
             <div class="padded-inner-container">
-              <!-- <strong style="text-decoration: line-through; text-decoration-color: red; text-decoration-thickness: 2px;">$495,000</strong> <br> -->
-              <strong>$625,000</strong>
+              <strong style="text-decoration: line-through; text-decoration-color: red; text-decoration-thickness: 2px;">$625,000</strong> <br>
+              <strong>$615,000</strong>
               <!-- <small>Listed at Price</small> -->
             </div>
           </div>
