--- a/index.html
+++ b/index.html
@@ -76,12 +76,16 @@
               <small>Baths</small>
             </div>
           </div>
-          <div class="Garage space">
+          <!-- <div class="Garage space">
             <div class="padded-inner-container">
               <strong>2</strong><small>Car Garage</small>
-            </div>
+            </div> -->
+            <div class="Commission Compensation">
+              <div class="padded-inner-container">
+                <strong style="color: blue;">2.5%</strong>
+                <small  style="color: blue;">Buyer's Broker Compensation</small>
+              </div>
           </div>
-          <!-- <small class="year-built">Built: 2019</small> -->
         </div>
 
         <div class="actions-container flex">
