fixing garage section

--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
               <small>Baths</small>
             </div>
           </div>
-          <!-- <div class="Garage space">
+          <div class="Garage space">
             <div class="padded-inner-container">
               <strong>2</strong><small>Car Garage</small>
-            </div> -->
+            </div>
+            </div>
             <div class="Commission Compensation">
               <div class="padded-inner-container">
                 <strong style="color: blue;">2.5%</strong>
